# morfeus

./: .buildinfo  .coveragerc  .darglint  .flake8  .gitignore  .gitlab-ci.yml  .isort.cfg  .rstcheck.cfg  1194774.xyz  ACKNOWLEDGMENTS.md  CHANGELOG.md  CITATION.cff  LICENSE  README.md  README.rst  bite_angle.html  buried_volume.html  cli.html  cone_angle.html  conformer.html  dispersion.html  environment-dev.yml  environment-opt.yml  environment.yml  genindex.html  index.html  installation.html  local_force.html  mypy.ini  notes.html  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  pyramidalization.html  pytest.ini  requirements-dev.txt  requirements-opt.txt  requirements.txt  sasa.html  (+6 more)
.doctrees/: bite_angle.doctree  buried_volume.doctree  cli.doctree  cone_angle.doctree  conformer.doctree  dispersion.doctree  environment.pickle  index.doctree  installation.doctree  local_force.doctree  notes.doctree  pyramidalization.doctree  sasa.doctree  solid_angle.doctree  sterimol.doctree  xtb.doctree
_modules/: index.html
_sources/: bite_angle.rst.txt  cli.rst.txt  conformer.rst.txt  dispersion.rst.txt  installation.rst.txt  notes.rst.txt  pyramidalization.rst.txt  sterimol.rst.txt  xtb.rst.txt
api/: morfeus.bite_angle.html  morfeus.buried_volume.html  morfeus.calculators.html  morfeus.cone_angle.html  morfeus.config.html  morfeus.conformer.html  morfeus.d3_data.html  morfeus.data.html  morfeus.dispersion.html  morfeus.geometry.html  morfeus.html  morfeus.io.html  morfeus.local_force.html  morfeus.plotting.html  morfeus.pyramidalization.html  morfeus.qc.html  morfeus.sasa.html  morfeus.solid_angle.html  morfeus.sterimol.html  morfeus.typing.html  morfeus.utils.html  morfeus.visible_volume.html  morfeus.xtb.html
data/: c6_reference_data.pickle
docs/: api.rst  bite_angle.rst  buried_volume.rst  cli.rst  cone_angle.rst  cone_angles.rst  conf.py  conformer.rst  dispersion.rst  index.rst  installation.rst  local_force.rst  multiwfn.rst  notes.rst  pyramidalization.rst  refs.bib  sasa.rst  solid_angle.rst  sterimol.rst  tblite.rst  xtb.rst
morfeus/: __init__.py  __main__.py  bite_angle.py  buried_volume.py  c6_coefficients.py  calculators.py  cone_angle.py  config.py  conformer.py  d3_data.py  data.py  dispersion.py  geometry.py  helpers.py  io.py  local_force.py  morfeus.py  multiwfn.py  plotting.py  pyramidalization.py  qc.py  sasa.py  script_buried_volume.py  script_cone_angle.py  (+13 more)
(+805 files in other folders)
