[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
branch = true
omit = ["*/site-packages/*"]

[tool.coverage.report]
show_missing = true

[tool.isort]
profile = "black"
multi_line_output = 3
force_sort_within_sections = true
order_by_type = false
group_by_package = true
lexicographical = true

[tool.mypy]
allow_redefinition = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_subclassing_any = true
follow_imports = "silent"
ignore_missing_imports = true
implicit_reexport = false
strict_equality = true
no_implicit_optional = true
local_partial_types = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
show_traceback = true
plugins = "numpy.typing.mypy_plugin"

[tool.pytest.ini_options]
addopts = "-m 'not (benchmark or xtb)'"
markers = ["benchmark: mark a test as method benchmark", "xtb: mark a test as requiring the xtb-python dependency"]